--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "react-clean",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "devDependencies": {
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  }
+	"name": "react-clean",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack-dev-server --mode development --hot --open",
+		"test": "ts-node --project ./scripts/tsconfig.json --files ./scripts/react/start.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"classnames": "^2.2.6",
+		"less": "^3.11.1",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"typescript": "^3.8.3"
+	},
+	"devDependencies": {
+		"ts-node": "^8.8.2",
+		"@types/react": "^16.9.34",
+		"@types/react-dom": "^16.9.6",
+		"html-webpack-plugin": "^4.2.0",
+		"webpack": "^4.42.1",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3",
+		"clean-webpack-plugin": "^3.0.0",
+		"style-loader": "^1.1.3",
+		"css-loader": "^3.5.2",
+		"less-loader": "^5.0.0",
+		"ts-loader": "^6.2.2"
+	}
 }
