--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server --mode development --hot --open",
-		"test": "ts-node --project ./scripts/tsconfig.json --files ./scripts/react/start.ts"
+		"start": "ts-node --project ./scripts/tsconfig.json --files ./scripts/webpack/start.ts"
 	},
 	"keywords": [],
 	"author": "",
@@ -15,6 +14,8 @@
 		"less": "^3.11.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-redux": "^7.2.0",
+		"redux": "^4.0.5",
 		"typescript": "^3.8.3"
 	},
 	"devDependencies": {
