--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "ts-node --project ./scripts/tsconfig.json --files ./scripts/webpack/start.ts"
+		"start": "ts-node --project ./scripts/tsconfig.json --files ./scripts/build/start.ts"
 	},
 	"keywords": [],
 	"author": "",
