--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"chalk": "^4.0.0",
 		"classnames": "^2.2.6",
 		"less": "^3.11.1",
 		"react": "^16.13.1",
@@ -21,18 +20,20 @@
 		"typescript": "^3.8.3"
 	},
 	"devDependencies": {
+		"file-loader": "^6.0.0",
+		"chalk": "^4.0.0",
 		"@types/react": "^16.9.34",
-		"@types/react-dom": "^16.9.6",
+		"@types/react-dom": "^16.9.7",
 		"@types/webpack-dev-server": "^3.10.1",
 		"clean-webpack-plugin": "^3.0.0",
-		"css-loader": "^3.5.2",
-		"html-webpack-plugin": "^4.2.0",
-		"less-loader": "^5.0.0",
-		"style-loader": "^1.1.3",
-		"ts-loader": "^6.2.2",
+		"css-loader": "^3.5.3",
+		"html-webpack-plugin": "^4.3.0",
+		"less-loader": "^6.1.0",
+		"style-loader": "^1.2.1",
+		"ts-loader": "^7.0.3",
 		"ts-node": "^8.8.2",
-		"webpack": "^4.42.1",
+		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.10.3"
+		"webpack-dev-server": "^3.11.0"
 	}
 }
