--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"allowSyntheticDefaultImports": true,
 		"experimentalDecorators": true,
 		"esModuleInterop": true,
+		"resolveJsonModule": true,
 		"lib": ["es7", "dom"],
 		"jsx": "react",
 		"moduleResolution": "Node",
