--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 	"license": "ISC",
 	"dependencies": {
 		"classnames": "^2.2.6",
+		"es6-promise": "^4.2.8",
 		"less": "^3.11.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
 		"redux": "^4.0.5",
+		"svga.lite": "^1.3.1",
 		"typescript": "^3.8.3"
 	},
 	"devDependencies": {
