--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
 		"sourceMap": true,
 		"allowJs": true,
 		"module": "commonjs",
-		"target": "es6",
+		"target": "es5",
 		"allowSyntheticDefaultImports": true,
 		"experimentalDecorators": true,
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
-		"lib": ["es7", "dom"],
+		"lib": ["es7", "dom", "es2015.promise"],
 		"jsx": "react",
 		"moduleResolution": "Node",
 		"baseUrl": "./",
