--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
 		"redux": "^4.0.5",
+		"rxjs": "^6.5.5",
 		"svga.lite": "^1.3.1",
 		"typescript": "^3.8.3"
 	},
