--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@emotion/core": "^10.0.28",
 		"classnames": "^2.2.6",
-		"less": "^3.11.1",
+		"less": "^3.11.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
