--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
 		"typescript": "^3.9.5"
 	},
 	"devDependencies": {
-		"file-loader": "^6.0.0",
-		"chalk": "^4.1.0",
 		"@types/react": "^16.9.36",
 		"@types/react-dom": "^16.9.8",
 		"@types/webpack-dev-server": "^3.11.0",
+		"chalk": "^4.1.0",
 		"clean-webpack-plugin": "^3.0.0",
-		"html-webpack-plugin": "^4.3.0",
 		"css-loader": "^3.5.3",
+		"file-loader": "^6.0.0",
+		"html-webpack-plugin": "^4.3.0",
 		"less-loader": "^6.1.0",
+		"mobile-select": "^1.1.2",
 		"style-loader": "^1.2.1",
 		"ts-loader": "^7.0.5",
 		"ts-node": "^8.10.2",
