--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@emotion/core": "^10.0.28",
 		"classnames": "^2.2.6",
+		"dayjs": "^1.10.4",
 		"less": "^3.11.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
